centralizando formulário de contato

--- a/index.html
+++ b/index.html
@@ -198,22 +198,22 @@
                </div>
             </div>
             <div class="row">
-               <div class="col-md-6">
+               <div class="col-md-8 offset-md-2">
                   <form id="request" class="main_form">
                      <div class="row">
-                        <div class="col-md-12 ">
-                           <input class="contactus" placeholder="Nome" type="type" name="name"> 
+                        <div class="col-md-12">
+                           <input class="contactus" placeholder="Nome" type="type" name="name">
                         </div>
                         <div class="col-md-12">
-                           <input class="contactus" placeholder="Email" type="type" name="email"> 
+                           <input class="contactus" placeholder="Email" type="type" name="email">
                         </div>
                         <div class="col-md-12">
-                           <input class="contactus" placeholder="Celular" type="type" name="phone">                          
+                           <input class="contactus" placeholder="Celular" type="type" name="phone">
                         </div>
                         <div class="col-md-12">
                            <input class="contactus1" placeholder="Mensagem" type="type" name="message">
                         </div>
-                        <div class="col-md-12">
+                        <div class="col-md-6 offset-md-4">
                            <button class="send_btn">Enviar</button>
                         </div>
                      </div>
